...

            onValueChange = { novoValor ->
                taskName.value = novoValor
            },

            label = {
                Text("Nova tarefa")
            }
        )

        Button(
            onClick = {

...
                )

                taskName.value = ""
            }
        ) {

            Text("Adicionar")
        }

        Button(
            onClick = onOpenCompleted
        ) {

...
